k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # 앞서 생성한 발급자 지정
    cert-manager.io/cluster-issuer: http-issuer
    #nginx.ingress.kubernetes.io/use-regex: "true"
  name: subway-ingress

spec:
  rules:
    - host: bingbingpa.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subway-service
                port:
                  number: 80

  tls:
    - hosts:
        - bingbingpa.kro.kr

      # Secret 리소스를 생성하지 않아도 cert-manager에서 자동으로 인증서를 발급받아서 Secret을 생성한다. 사용자는 생성될 Secret의 이름만 지정하면 된다.
      secretName: nginx-tls
