k8s/subway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    # 라벨링과 달리 필터링은 안됨. 단순 메타데이터를 저장하는 용도
    # NGINX Ingress Controller에 의해 처리될 것을 명시
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: http-issuer
    name: subway-ingress

spec:
    # 외부 트래픽을 어떻게 처리할 지 정의
    rules:
    # 특정 도메인으로 들어오는 트래픽에 대해 라우팅 정의, 생략시 모든 트래픽 처리
    - host: infra-workshop.kro.kr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: subway-service
              port: 
                number: 80
    tls:
    - hosts:
        - infra-workshop.kro.kr
      secretName: nginx-tls
